<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:orientation="vertical"
    android:background="@drawable/credit_border_top"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:orientation="vertical"
        android:layout_marginBottom="10dip"   
        android:padding="25dip"
         >
		<TextView 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/dungttm"
		    android:gravity="center_horizontal"
		    android:layout_marginTop="20dip"
		    android:layout_marginBottom="10dip"
		    android:textSize="20sp"
		    android:textColor="#006699"
		    />
        <TextView 
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/credit"
		    android:gravity="center_horizontal"
		    android:textSize="14sp"
		    android:textColor="#000"
		    android:id="@+id/content_1_tv"
            />
        <TextView 
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/push_nt"
		    android:gravity="center_horizontal"
		    android:textSize="14sp"
		    android:textColor="#000"
		    android:id="@+id/content_2_tv"
            />        
        <TextView 
            android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/convert"
		    android:gravity="center_horizontal"
		    android:layout_marginBottom="10dip"
		    android:textSize="14sp"
		    android:textColor="#000"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"        
        android:background="#ccc"
        android:padding="2dip"
        >
        <TextView
            android:id="@+id/pay_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:text="@string/pay"
            android:layout_weight="0.5"
            android:gravity="center_horizontal"
            android:textColor="#4fa5d5"      
            android:background="#fff"
            android:layout_marginRight="1dip" 
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/cancel_tv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/close"
            android:padding="5dp"
            android:gravity="center_horizontal"
            android:textColor="#4fa5d5"
            android:background="#fff"
            android:layout_marginLeft="1dip"
            android:textSize="20sp"
             />
    </LinearLayout>
</LinearLayout>